<resources>
    <string name="app_name">Exploding Kittens 1.0</string>
    <!--<string name="app_name">Counter</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="how_to_play">
        HOW TO PLAY: The objective of the game is to avoid drawing an Exploding Kitten card. During your
        turn, you can play any amount of playable cards, trade 2 identical cards, trade 3 identical
        cards, trade 5 unique cards, or play no cards. When you are done playing cards you can
        press the "End Turn" button to draw a card.
        *Every turn, you must draw a card or play a card to skip your turn.
        *The screen will flash red if you make an invalid move.
    </string>
    <string name="playing_a_card">
        In order to play a card, touch a card image and allow it to turn grey. After you have
        selected a card, press the Enter button to play the card. *Make sure that you only have
        one card selected when you press Enter.
    </string>
    <string name="playing_defuse">
        The game will not allow you to play a defuse but it will automatically play it when
        you draw an Exploding Kitten. The defuse card is the only card that can remove an
        Exploding Kitten from your hand.
    </string>

    <string name="attackDescription">
        Skips your turn. Forces the next player to draw two cards. Can be stacked.
    </string>
    <string name="shuffleDescription">
        Shuffles the deck.
    </string>
    <string name="favorDescription">
        Takes a random card from another player.
    </string>
    <string name="skipDescription">
        End your turn without drawing a card.
    </string>
    <string name="seeTheFutureDescription">
        Privately view the top 3 cards of the deck. Press Exit button to exit view.
    </string>
    <string name="nopeDescription">
        Cancels a previously played Attack, Skip, or Nope Card.
    </string>
    <string name="trade2Description">
        In the game, you can trade 2 identical cards in order to steal a random card from another
        player.
    </string>
    <string name="trade2Directions">
        First, press the "Trade 2" button and select your two cards. Next, select a player to target
        (represented by a card back). Finally, press the "Enter" button to confirm your action.
    </string>
    <string name="trade3Description">
        In the game, you can trade 3 identical cards in order to request a specific card from another
        player.
    </string>
    <string name="trade3Directions">
        First, press the "Trade 3" button and select your three  cards. Next, select a player to target
        (represented by a card back). Next, press the "Enter" button. Then, your hand will change
        to all possible cards in the game. Here, choose a card to ask for and press the "Enter"
        button to confirm your action.
    </string>
    <string name="trade5Description">
        In the game, you can trade 5 unique cards in order to take a chosen card from the
        discard pile.
    </string>
    <string name="trade5Directions">
        First, press the "Trade 5" button and select your 5 unique cards. Next, select the discard
        pile and select a card to take. Next, press the discard pile again to exit it. Finally,
        press the "Enter" button to confirm your action.
    </string>

    <string name="explodingKitten_popup_text">
        Wow! You just defused an Exploding Kitten. If you want to place the card in a random place,
        press the Random Place button. If you want to choose a place in the deck press the +
        and - button until you reach your desired place. *Note: The 0th position is the
        top of the deck. To confirm the position, press the Enter button.
    </string>
</resources>
